--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Color</string>
+    <string name="open">Open</string>
+    <string name="camera">Camera</string>
+    <string name="touch">Touch to see the colour.</string>
+    <string name="result" translatable="false">R=%1$d, G=%2$d, B=%3$d, c(DPA)=%4$.2fμM</string>
+    <string name="settings">Settings</string>
+    <string name="Colors">Colors</string>
+    <string name="Size">Size</string>
 </resources>
